# pico-analyze

./: .gitignore  README.md  learning_dynamics.py  pyproject.toml
configs/: decoder-ov.yaml  demo.yaml  pico-decoder-large-ov.yaml  pico-decoder-medium-ov.yaml  pico-decoder-small-ov.yaml  pico-decoder-tiny-ov.yaml
lib/: cka.py
lib/svcca/: cca_core.py  pwcca.py
scripts/: analyze.py
src/components/: __init__.py  _base.py  _registry.py  base.py  compound.py  ov_circuit.py  simple.py
src/config/: _base.py  _registry.py  base.py  learning_dynamics.py  metrics.py  monitoring.py
src/metrics/: __init__.py  _components.py  _registry.py  base.py  cka.py  condition_number.py  gini.py  hoyer.py  norm.py  per.py  pwcca.py
src/utils/: data.py  exceptions.py  initialization.py  logging.py
